# linkedin_webscraping

./: .env.example  .gitignore  README.md  login_linkedin.ipynb  main.py  pyproject.toml  requirements.txt  velocidade_internet.py
.claude/skills/job-scoring-rules/: SKILL.md
.claude/skills/linkedin-job-digest/: SKILL.md
.claude/skills/match-quality-audit/: SKILL.md  audit_matches.py
.claude/skills/posting-time-trends/: SKILL.md  analyze_trends.py
.claude/skills/profile-to-buckets/: SKILL.md
app/: config.py
app/scrapper/: main.py  scrapper.py
app/scrapper/base/: selenium_basefile.py
app/scrapper/config/: buckets.json  scoring.py
app/scrapper/linkedin_roles/: login.py  posts.py
app/scrapper/utils/: alerts.py  utils.py
