[project]
name = "linkedin-webscraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
    "selenium>=4.44.0",
    "speedtest-cli>=2.1.3",
    "webdriver-manager>=4.1.2",
]
